--- a/public/scss/_banner.scss
+++ b/public/scss/_banner.scss
@@ -18,7 +18,7 @@
         height: 470px;
         overflow: hidden;
         border-radius: 20px 0 0 20px;
-        background-image: url(../img/header_bg.jpg);
+        background-image: url(../img/header_bg.webp);
         background-position: center;
         background-size: cover;
         right: 0;
