--- a/public/scss/_footer.scss
+++ b/public/scss/_footer.scss
@@ -1,3 +1,37 @@
 footer {
-    
+    background-color: $black_color;
+    min-height: 100px;
+    text-align: center;
+    line-height: 1.5;
+    padding: 20px 0;
+    hr {
+        width:235px;
+        margin-bottom: 20px;
+    }
+
+    nav {
+        ul{
+            display: flex;
+            justify-content: center;
+            margin: 20px 0 30px 0;
+
+            li {
+                margin: 0 20px;
+            }
+        }
+    }
+
+    .logo img {
+        width:235px;
+    }
+
+    a{
+        color:white;
+    }
+
+    .phone {
+        font-size: 28px;
+
+    }
+
 }
