--- a/public/scss/_vars.scss
+++ b/public/scss/_vars.scss
@@ -1,7 +1,7 @@
 $main_color: #FF5301;
 $hover_color: #ec782b;
 $sub_color: #5aa495;
-$black_color: #333;
+$black_color: #050B20;
 
 $gray_bg_color:#F7F7F7;
 $gray_bg_color_y:#FCFCF3;
