--- a/public/scss/_about.scss
+++ b/public/scss/_about.scss
@@ -51,3 +51,55 @@
         }
     }
 }
+
+@media (max-width:1024px) {
+    .about .photo .col .photo_wrap {
+        width: 140px;
+    }
+}
+
+@media (max-width:768px) {
+    .about {
+        flex-direction: column-reverse;
+
+        .text {
+            width:100%;
+        }
+
+        .photo {
+            width:100%;
+            justify-content: space-between;
+            .col {
+                width: 30%;
+                .photo_wrap {
+                    width:100%;
+                }
+            }
+        }
+    }
+}
+
+
+@media (max-width:480px) {
+    .about {
+        padding: 10px 20px;
+        .photo {
+            .col {
+                width: 48%;
+                .photo_smile {
+                    height: 150px;
+                }
+
+                .photo_big {
+                    height: 200px;
+                }
+            }
+            .col_one {
+                display: none;
+            }
+        }
+
+    }
+
+
+}
