--- a/public/scss/_banner.scss
+++ b/public/scss/_banner.scss
@@ -57,3 +57,33 @@
         }
     }
 }
+
+@media (max-width:768px) {
+    .banner  {
+        display: flex;
+        flex-direction: column-reverse;
+
+        .bnr_img {
+            position: relative;
+            width: 96%;
+            margin: 0 2%;
+            height: 350px;
+            border-radius: 20px;
+        }
+
+        .container {
+            height: auto;
+            .bnr_text {
+                width:100%;
+                margin: 20px auto;
+                text-align: center;
+            }
+        }
+    }
+}
+
+@media (max-width:768px) {
+    .banner .cerecter .c_blk .text {
+        font-size: 12px;
+    }
+}
