--- a/public/scss/_contacts.scss
+++ b/public/scss/_contacts.scss
@@ -8,6 +8,7 @@
     .map {
         height: 400px;
         flex: 1;
+        overflow: hidden;
     }
 
     .text {
@@ -16,13 +17,21 @@
         display: flex;
         flex-direction: column;
 
+        .phone{
+            font-size: 28px;
+            margin-bottom: 10px;
+        }
+
+        .email {
+            margin-bottom: 10px;
+        }
 
     }
 
     .social_net {
         display: flex;
         gap:10px;
-
+        margin-top: 20px;
         .social_lnk {
             background-color: $main_color;
             display: block;
@@ -30,6 +39,48 @@
             height: 50px;
             border-radius: 50px;
             border:1px solid $gray_border_color;
+            background-position: center;
+            background-repeat:  no-repeat;
+
+            &:hover {
+                background-color: $hover_color;
+            }
+
+            &.sl_vk {
+                background-image: url(../img/icon/social/vk.svg);
+            }
+
+            &.sl_ok {
+                background-image: url(../img/icon/social/ok.svg);
+            }
+
+            &.sl_tg {
+                background-image: url(../img/icon/social/tg.svg);
+            }
+
+            &.sl_ws {
+                background-image: url(../img/icon/social/ws.svg);
+            }
         }
+
+    }
+}
+
+@media (max-width:768px) {
+    .contacts_blk {
+        width:unset;
+    }
+}
+
+
+
+@media (max-width:480px) {
+    .contacts_blk {
+        .map {
+            width:100%;
+            margin-top: 20px;
+            height: 200px;
+        }
+        flex-direction: column-reverse;
     }
 }
