--- a/public/scss/_header.scss
+++ b/public/scss/_header.scss
@@ -4,3 +4,14 @@ header{
         justify-content: space-between;
     }
 }
+
+@media (max-width:768px) {
+    header{
+        .nav_menu {
+            display: none;
+        }
+        .container {
+            justify-content: center;
+        }
+    }
+}
