--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -104,6 +104,27 @@ h1 {
     }
 }
 
+@media (max-width:1024px) {
+    h1{
+        font-size: 38px
+    }
+    h2 {
+        font-size: 24px;
+    }
+}
+
+@media (max-width:1024px) {
+    h1{
+        font-size: 28px;
+        span{
+            font-size: 32px;
+        }
+    }
+    h2 {
+        font-size: 20px;
+    }
+}
+
 @import "header";
 @import "menues";
 @import "banner";
