Анимация при скроле

--- a/public/scss/_about.scss
+++ b/public/scss/_about.scss
@@ -4,6 +4,8 @@
     border-radius: 20px;
     padding: 20px 30px;
 
+    opacity: 0;
+
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
@@ -15,6 +17,7 @@
     .photo {
         display: flex;
         gap: 20px;
+
         .col {
             display: flex;
             flex-direction: column;
