--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -96,6 +96,14 @@ h1 {
     text-align: center;
 }
 
+.in_tur {
+    .container{
+        width: 70%;
+        margin-left: auto;
+        margin-right: auto;
+    }
+}
+
 
 @media (max-width:1280px) {
     .container{
