--- a/public/scss/_banner.scss
+++ b/public/scss/_banner.scss
@@ -64,7 +64,7 @@
     .banner  {
         display: flex;
         flex-direction: column-reverse;
-
+        padding-top: 0;
         .bnr_img {
             position: relative;
             width: 96%;
@@ -77,7 +77,7 @@
             height: auto;
             .bnr_text {
                 width:100%;
-                margin: 20px auto;
+                margin:  20px auto;
                 text-align: center;
             }
         }
