--- a/public/scss/_program.scss
+++ b/public/scss/_program.scss
@@ -56,6 +56,8 @@
     .programm_wrapper {
         .dey_element {
             flex-direction: column;
+            width:90%;
+            padding: 5%;
             .text {
                 margin: 0;
             }
