--- a/public/scss/_vars.scss
+++ b/public/scss/_vars.scss
@@ -1,8 +1,8 @@
 
-$main_color: #31708E;
-$hover_color: #659DBD;
-// $main_color: #FF5301;
-// $hover_color: #ec782b;
+// $main_color: #31708E;
+// $hover_color: #659DBD;
+$main_color: #FF5301;
+$hover_color: #ec782b;
 $sub_color: #5aa495;
 $black_color: #050B20;
 
